--- a/package.json
+++ b/package.json
@@ -12,12 +12,19 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.3.4",
+    "@mui/icons-material": "^5.15.9",
     "@mui/material": "^5.15.9",
+    "@typegoose/typegoose": "^12.1.0",
+    "@types/bcrypt": "^5.0.2",
+    "bcrypt": "^5.1.1",
     "framer-motion": "^11.0.3",
+    "jose": "^5.2.1",
+    "mongoose": "^8.1.1",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.50.1"
+    "react-hook-form": "^7.50.1",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@types/node": "^20",
